--- a/Source/Resourses/CSS/maps-view-css.css
+++ b/Source/Resourses/CSS/maps-view-css.css
@@ -39,11 +39,10 @@
 .upper-filter{
 	display: flex;
 	width: 100%;
-	height: 40px;
-	margin-bottom: 15px;
+	height: 10%;
 	background: #FFFFFF;
 	justify-content: space-between;
-	border-radius: 5px;
+	border-radius: 5px 5px 0 0;
 }
 /* the km meters at pannel */
 .distance-meter{
@@ -96,7 +95,7 @@
 	width: 100%;
 }
 .map-wrapper{
-	width: 99%;
+	width: 100%;
 }
 
 /* The divider */
@@ -188,16 +187,39 @@ input[type="range"]::-ms-fill-upper {
 }
 
 /* Map legend */
+.map-legend{
+	display: flex;
+	justify-content: space-around;
+	background: #FFF;
+	height: 10%;
+	border-radius: 0 0 5px 5px;
+}
 .map-legend > li {
-    display: inline-block;
-    /* You can also add some margins here to make it look prettier */
-    zoom:1;
-    *display:inline;
-    /* this fix is needed for IE7- */
+	display: flex;
+	justify-content: center;
+	margin: auto;
+}
+.map-legend-item{
+	width: 33%;
 }
 .map-legend-item > div{
 	width: 15px;
 	height: 15px;
+	margin-right: 5%;
+	border-radius: 50%;
+}
+
+.reLocateMe{
+	display: flex;
+	justify-content: center;
+	margin-top: 1%;
+}
+.reLocateMe > div{
+	width: 20%;
+	padding: 2%;
+	background: #FFF;
+	border-radius: 5px;
+	text-align: center;
 }
 
 /* role related css*/
@@ -217,4 +239,41 @@ input[type="range"]::-ms-fill-upper {
 }
 .professional-data{
 	
+}
+
+/* All professionals (end of map page) related css */
+.all-professionals-section{
+	margin-top: 10%;
+}
+.all-professionals-title > h5{
+	padding: 1%;
+	background: rgba(0, 0, 0, 0.67);
+	border-radius: 5px;
+	color: #ffffff;
+	font-size: 2em;
+	text-align: center;
+}
+.roles-cards{
+	display: flex;
+	width: 95%;
+	justify-content: space-around;
+	margin: auto;
+	padding: 1%;
+}
+.card-of-role{
+	background: #FFF;
+	width: 10%;
+	text-align: center;
+	border-radius: 5px;
+	padding: 1%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.card-of-role > img{
+	width: 50%;
+	margin: auto;
+}
+.card-of-role > a{
+	margin-top: 10%;
 }
