--- a/Source/Resourses/CSS/general.css
+++ b/Source/Resourses/CSS/general.css
@@ -11,3 +11,15 @@ body{
 	margin: 0;
 	padding: 0;
 }
+
+.meddium-text{
+
+}
+
+.centralized{
+	text-align: center;
+}
+
+.left-position{
+	text-align: left;
+}
