--- a/Source/Resourses/CSS/carousel.css
+++ b/Source/Resourses/CSS/carousel.css
@@ -19,6 +19,7 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background: #06060657;
 }
 
 /* Position the "next button" to the right */
@@ -35,12 +36,15 @@
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  font-size: 1em;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background: #06060657;
+  border-radius: 0 0 5px;
 }
 
 /* Number text (1/3 etc) */
@@ -89,4 +93,9 @@
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
+}
+
+.numbertext{
+  background: #06060657!important;
+  border-radius: 0 0 5px!important;
 }
